[gd_scene load_steps=5 format=3 uid="uid://scu5wudpsmj3"]

[ext_resource type="Script" uid="uid://dhpj3jxvrqjeo" path="res://Enemy/enemy.gd" id="1_px1sc"]
[ext_resource type="Texture2D" uid="uid://h05a36oikkxe" path="res://Assets/icon.svg" id="2_am0pq"]
[ext_resource type="Texture2D" uid="uid://2atgjwvqvj3p" path="res://Assets/Sprites/Characters/deadBody.png" id="3_am0pq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o3f6"]
size = Vector2(23, 23)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 22
script = ExtResource("1_px1sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4o3f6")
one_way_collision_margin = 0.0

[node name="DeadSprite" type="Sprite2D" parent="."]
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_am0pq")

[node name="AliveSprite" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, -4.91738e-07)
scale = Vector2(0.160156, 0.160156)
texture = ExtResource("2_am0pq")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 17

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2(9, 7)

[node name="NavAgent" type="NavigationAgent2D" parent="."]
target_desired_distance = 4.0
path_max_distance = 1000.0
navigation_layers = 16
